# mbslib

./: .clang-format  CMakeLists.txt  CTestConfig.cmake  LicenseInformation.txt  README.md  ReleaseNotes.txt  mbslib.pc.cmake
cmake/: ADOLC_Hints_Example.txt  Common.cmake  Compiler.cmake
dependencies/: CMakeLists.txt
dependencies/mbstestlib/: limitations - remarks.txt  readme.txt  testfile-example.xml  testfile-hints.txt
dependencies/mbstestlib/src/: Adapter.hpp  CMakeLists.txt  ErrorLogger.cpp  ErrorLogger.h  RobotModelParser.cpp  RobotModelParser.h  Tester.cpp  Tester.h  TesterTypes.cpp  TesterTypes.h  parserTools.cpp  parserTools.h  rndNumberGen.py  testlog2HTMLConverter.py  testsetXML2intermediateConverter.py
dependencies/mbstestlib/tests/: 2_rot_1_prism_joints.txt  6dof.txt  6dof.xml  aba-failure-models.xml  aba_failure_2rot_orthoaxis_and_lever_fixedbase.txt  aba_failure_2rot_sameaxis_and_lever_fixedbase.txt  aba_failure_2rot_sameaxis_without_lever_fixedbase.txt  aba_failure_fixedbase.txt  aba_failure_zeroInertia_fixedbase.txt  complex-models.xml  complex_fixedbase.txt  complex_fixedbase_com0.txt  complex_fixedbase_fixedrotreplacedbyjoints.txt  complex_fixedbase_pointmassesonly.txt  complex_fixedbase_pointmassesonlyandinertiadiagonal.txt  complex_fixedbase_q0.txt  complex_fixedbase_q0andqdot0.txt  complex_fixedbase_qdot0.txt  complex_fixedbase_withoutfixedrot.txt  (+22 more)
dependencies/simtools/: CMakeLists.txt
doc/: todo.txt
doc/doxygen/: Doxyfile
examples/: CMakeLists.txt
examples/1DOF_Pendel_simple/: 1DOF_Pendel_simple.cpp  CMakeLists.txt
examples/2DOF_Pendel_simple/: 2DOF_Pendel_simple.cpp  CMakeLists.txt
examples/adolc/: CMakeLists.txt
examples/adolc/exp_01_aba_jac/: CMakeLists.txt  exp_01_aba_jac.cpp
examples/exp_01/: CMakeLists.txt  exp_01.cpp
examples/exp_02_6dof/: CMakeLists.txt  exp_02_6dof.cpp
examples/exp_03_extforce/: CMakeLists.txt  exp_03_extforce.cpp
examples/exp_04_dirkin/: CMakeLists.txt  exp_04_dirkin.cpp
examples/exp_05_derive_mbs/: CMakeLists.txt  exp_05_derive_mbs.cpp
examples/exp_06_est_mbs/: CMakeLists.txt  exp_06_est_mbs.cpp
examples/exp_07_aba/: CMakeLists.txt  exp_07_aba.cpp
examples/exp_08_jacobian/: CMakeLists.txt  exp_08_jacobian.cpp
examples/exp_09_kuka/: CMakeLists.txt  exp_09_kuka.cpp
examples/exp_10_contact/: CMakeLists.txt  exp_10_contact.cpp
examples/exp_11_simulation/: CMakeLists.txt  exp_11_simulation.cpp
examples/exp_12_springs/: CMakeLists.txt  exp_12_springs.cpp
examples/exp_13_springs_2/: CMakeLists.txt  exp_13_springs_2.cpp
examples/exp_14_parameters/: CMakeLists.txt  exp_14_parameters.cpp  exp_14_parameters.cpp~
examples/exp_15_springs1D/: CMakeLists.txt  exp_15_springs1D.cpp
examples/exp_16_kuka_springs/: CMakeLists.txt  exp_16_kuka_springs.cpp
examples/exp_17_jfcontroller/: CMakeLists.txt  exp_17_jfcontroller.cpp
examples/exp_20_pendulum_on_trolley/: CMakeLists.txt  exp_pendulum_on_trolley.cpp  motionEquation.h  motionEquationAnalytic.cpp  motionEquationMbslib.cpp
examples/exp_21_biorob_parameter_identification/: .gitignore  CMakeLists.txt  applyForwardDynamics.m  applyLevenbergMarquardt.m  biorob.cpp  biorob.h  computeMotorPositions.m  computeResiduals.m  example_library.m.in  runParameterIdentification.m
extensions/: CMakeLists.txt
extensions/model.lbr2/: CMakeLists.txt  DLRLBR2_C.cpp  DLRLBR2_DIRKIN_xyz.cpp  DLRLBR2_G.cpp  DLRLBR2_M.cpp  LBR2Arm.cpp  LBR2Arm.h  LBR2Model.cpp  LBR2Model.hpp  LBR2ModelAnalytic.cpp  LBR2ModelAnalytic.hpp  LBR2ModelMbslib.cpp  LBR2ModelMbslib.hpp  LBR2ModelParameters.cpp  LBR2ModelParameters.h  dlrlbr2.hpp
include/mbslib/: MbslibBaseClass.hpp  fileiteratorremove.cpp  mbslib.hpp  mbslib.muscle.models.hpp
src/: CMakeLists.txt
src/mbslib/: MbslibBaseClass.cpp  config.h.in
src/mbslib/collision/: CollisionDetector.cpp  PointContact.cpp  PointContactHandler.cpp
src/mbslib/elements/: Controllable.cpp  IIntegrate.cpp  UserStateVariable.cpp
src/mbslib/elements/base/: Base.cpp  FixedBase.cpp  FreeBase.cpp
src/mbslib/elements/compound/: MbsCompound.ABA.cpp  MbsCompound.CRBA.cpp  MbsCompound.RNE.cpp  MbsCompound.cpp  MbsCompoundWithAdder.cpp  MbsCompoundWithBuilder.cpp
src/mbslib/elements/drive/: ActiveDrive.cpp  ActiveSDDriveGenerator.cpp  ActiveSpringDamperDrive.cpp  Drive.cpp  PassiveDrive.cpp  PassiveSDDriveGenerator.cpp  PassiveSpringDamperDrive.cpp  ServoDrive.cpp  Spring1DJointDrive.cpp
src/mbslib/elements/endpoint/: Endpoint.cpp  EndpointMassless.cpp
src/mbslib/elements/fixed/: FixedRotation.cpp  FixedTranslation.cpp
src/mbslib/elements/force/: ForceGenerator.cpp  ForceGeneratorSet.cpp
src/mbslib/elements/fork/: Fork.cpp
src/mbslib/elements/joint/: Joint.cpp  Joint1DOF.cpp  JointForceSetter.cpp  JointNDOF.cpp  PrismaticJoint.cpp  RevoluteJoint.cpp  RevoluteJointZ.cpp
src/mbslib/elements/muscle/: Muscle.cpp  MuscleModel.cpp
src/mbslib/elements/muscle/model/: ForceControlledMuscleModel.cpp  MuscleWithStateModel.cpp
src/mbslib/elements/object/: MbsObject.cpp  MbsObjectNoSucc.cpp  MbsObjectOneSucc.cpp  MbsObjectTwoSucc.cpp
src/mbslib/elements/rigidbody/: RigidBodyDescription.cpp  RigidLink.cpp
src/mbslib/elements/spring/: Spring.cpp  Spring1D.cpp  Spring1DSingleEnded.cpp  Spring3D.cpp  SpringModel.cpp
src/mbslib/elements/spring/model/: LinearSpringModel.cpp  LinearSpringWithRopeModel.cpp
src/mbslib/parameter/: ParameterAdapter.cpp  ParametrizedObject.cpp  ParametrizedObjectCollection.cpp
src/mbslib/utility/: AggregateBody.cpp  CoordinateFrame.cpp  DeriveOMat.cpp  ForceTorque.cpp  JointState.cpp  SimulationControl.cpp  internalTests.cpp  mathtools.cpp  modeltools.cpp  stringtools.cpp  types_adolc.cpp
tests/: CMakeLists.txt
tests/1DOF_Pendulum/: 1DOF_Pendulum.cpp  CMakeLists.txt
tests/1DOF_SpringPendulum/: 1DOF_SpringPendulum.cpp  CMakeLists.txt
tests/2DOF_CompoundPendulumOnTrolley/: 2DOF_CompoundPendulumOnTrolley.cpp  CMakeLists.txt
tests/2DOF_ScaraManipulator/: 2DOF_ScaraManipulator.cpp  CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  basic_tests.cpp
tests/test.lbr2/: CMakeLists.txt  testLBR2.cpp
(+73 files in other folders)
