include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_library(exp_20_pendulum_on_trolley_motionEquationMbslib motionEquationMbslib.cpp motionEquation.h)
target_link_libraries(exp_20_pendulum_on_trolley_motionEquationMbslib mbslib)

add_executable(exp_20_pendulum_on_trolley_mbslib exp_pendulum_on_trolley.cpp motionEquation.h)
target_link_libraries(exp_20_pendulum_on_trolley_mbslib exp_20_pendulum_on_trolley_motionEquationMbslib)


add_library(exp_20_pendulum_on_trolley_motionEquationAnalytic motionEquationAnalytic.cpp motionEquation.h)

add_executable(exp_20_pendulum_on_trolley_analytic exp_pendulum_on_trolley.cpp motionEquation.h)
target_link_libraries(exp_20_pendulum_on_trolley_analytic exp_20_pendulum_on_trolley_motionEquationAnalytic )

